kubernetes/3. multi-container app/k8s/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: server
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server-container
          image: coderchirag2002/multi-app-server
          ports:
            - containerPort: 5000
