kubernetes/3. multi-container app/k8s/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: server
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 80
      targetPort: 5000
